<resources>
    <string name="app_name">Github</string>
    <string name="search_button_text">Search</string>
    <string name="search_page_text">Search</string>
    <string name="textView_branch">Branch</string>
    <string name="checkBox_min_salary">Min. Salary</string>
    <string name="checkBox_company">Company</string>
    <string name="textView_advanced_search_options">Advanced Search Options</string>
    <string name="checkBox_region">Region</string>
</resources>
